--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members-search/user-group-members-search.component.scss
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members-search/user-group-members-search.component.scss
@@ -21,6 +21,16 @@
 
 .user-remove {
     width: 100px;
+
+    .btn {
+        &:not(:hover) {
+            color: $text-muted;
+        }
+
+        &:hover {
+            color: $dark;
+        }
+    }
 }
 
 .scrollable {
