--- a/src/app/home/control-panel/user-group/user-group.component.html
+++ b/src/app/home/control-panel/user-group/user-group.component.html
@@ -16,8 +16,9 @@
     <div class="d-flex align-items-center">
       <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null"></odp-search-box>
       <!-- <odp-search-box (enteredText)="searchGroup($event)" (reset)="resetSearch()"></odp-search-box> -->
-      <button class="add-new btn btn-primary ml-3" (click)="addNewGroup()" *ngIf="hasPermission('PMGBC')">
-        <span class="dsi dsi-plus"></span>
+      <button class="add-new btn btn-primary ml-3 d-flex align-items-center justify-content-center btn-min-width" (click)="addNewGroup()" *ngIf="hasPermission('PMGBC')">
+        <span class="dsi dsi-plus mr-2"></span>
+        <span class="text">New Group</span>
       </button>
     </div>
   </div>
@@ -43,7 +44,7 @@
         <div class="group-actions"></div>
       </div>
       <div class="list-group-item d-flex align-items-center justify-content-between"
-        *ngFor="let group of groupList|filterTeam:searchTerm">
+        *ngFor="let group of groupList|filterTeam:searchTerm" [routerLink]="['../gm', group._id]">
         <div class="group-name text-dark fw-500">{{group.name}}</div>
         <div class="d-flex align-items-center">
           <div class="group-users-count">{{group.membersCount}}</div>
@@ -70,18 +71,12 @@
           </div>
         </div>
         <div class="group-actions">
-          <button type="button" class="btn btn-link text-muted p-1 mr-2" [routerLink]="['../gm', group._id]">
+          <!-- <button type="button" class="btn btn-link text-muted p-1 mr-2" [routerLink]="['../gm', group._id]">
             <span class="dsi dsi-edit"></span>
           </button>
           <button type="button" class="btn btn-link text-muted p-1">
             <span class="dsi dsi-trash"></span>
-          </button>
-          <!-- <button type="button" class="btn btn-light bg-transparent border mr-2" [routerLink]="['../gm', group._id]">
-              <span class="dsi dsi-edit text-secondary"></span>
-            </button>
-            <button type="button" class="btn btn-light bg-transparent border">
-              <span class="dsi dsi-trash text-secondary"></span>
-            </button> -->
+          </button> -->
         </div>
       </div>
     </div>
