--- a/src/app/home/control-panel/user-group/user-group.component.scss
+++ b/src/app/home/control-panel/user-group/user-group.component.scss
@@ -64,9 +64,17 @@
 }
 
 .list-group-item {
+
   &.header {
     min-height: 38px;
     max-height: 38px;
     color: #6C7584;
+  }
+
+  &:not(.header):hover {
+    cursor: pointer;
+    transform-origin: 0.2s;
+    box-shadow: 0px 0px 3px rgba($color: #000000, $alpha: 0.6);
+    z-index: 2;
   }
 }
