--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-manage.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-manage.component.html
@@ -12,11 +12,11 @@
       <odp-basic-info hideLogo="true" [(name)]="group.name" [(description)]="group.description" [hideLogo]="true"
         [edit]="{status:editBasicDetails}">
         <div class="d-flex align-items-end align-self-start">
-          <button *ngIf="hasPermission('PMGBD')" type="button" class="btn btn-light text-danger border mr-3"
+          <button *ngIf="hasPermission('PMGBD')" type="button" class="btn btn-white border mr-3"
             (click)="deleteGroup()">
             <span class="dsi dsi-trash"></span>
           </button>
-          <button class="btn btn-light border btn-min-width mr-3" routerLink="../../gr">
+          <button class="btn btn-white border btn-min-width mr-3" routerLink="../../gr">
             <span>Cancel</span>
           </button>
           <button *ngIf="hasPermissionStartsWith('PMG')" class="btn btn-primary btn-min-width" (click)="saveGroup()">
