--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-users/user-group-users.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-users/user-group-users.component.html
@@ -13,11 +13,11 @@
             </div> -->
         </div>
         <div class="d-flex align-items-center">
-            <button *ngIf="selectedUsers.length > 0" type="button" class="btn btn-light border text-danger mr-3"
-                (click)="removeUsers()">
-                <span class="dsi dsi-trash" [ngbTooltip]="'Remove Users '+ selectedUsers.length"></span>
-            </button>
             <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null"></odp-search-box>
+            <button type="button" class="btn btn-white border text-danger ml-3" [disabled]="selectedUsers.length == 0"
+                (click)="removeUsers()" [ngbTooltip]="'Remove Users '+ selectedUsers.length">
+                <span class="dsi dsi-trash"></span>
+            </button>
             <button *ngIf="hasPermission('PMGMUC')" type="button" class="btn btn-primary ml-3" id="addNewMember"
                 (click)="openUsersModal()">
                 <span class="dsi dsi-plus"></span>
