--- a/src/app/home/faas/faas-listing/faas-listing.component.scss
+++ b/src/app/home/faas/faas-listing/faas-listing.component.scss
@@ -47,6 +47,7 @@
             min-width: 24px;
             max-width: 24px;
             display: inline-block;
+            color: $sub-headings;
           }
 
           .dsi,
