--- a/src/app/home/service-manager/service-manager.component.scss
+++ b/src/app/home/service-manager/service-manager.component.scss
@@ -48,6 +48,9 @@
           min-width: 24px;
           max-width: 24px;
           display: inline-block;
+          &:not(:hover) {
+            color: $sub-headings;
+          }
         }
 
         .dsi,
