--- a/src/app/utils/round-radio/round-radio.component.scss
+++ b/src/app/utils/round-radio/round-radio.component.scss
@@ -1,14 +1,20 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
-.round-radio-wrapper{
+.round-radio-wrapper {
     border-radius: 50%;
     border: 1px solid $border;
-    .round-radio-inner{
+
+    .round-radio-inner {
         border-radius: 50%;
     }
-    &.checked{
+
+    &.checked {
         border: 1px solid $dark;
         background: $dark;
+
+        &.disabled {
+            background: $secondary;
+        }
     }
 }
