--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -252,7 +252,7 @@
                         </button>
                     </div> -->
             <div (click)="loadAdminPage()"
-              class="admin-settings bg-light rounded d-flex flex-column justify-content-center align-items-center mr-3 hover"
+              class="admin-settings btn-white btn-sm border d-flex flex-column justify-content-center align-items-center mr-3 hover"
               ngbTooltip="Admin Panel" placement="bottom">
               <div class="dsi dsi-admin"></div>
             </div>
