--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -6,9 +6,10 @@
     </div>
     <div class="d-flex align-items-center">
       <odp-search-box (enteredText)="search($event)" (reset)="resetSearch();"></odp-search-box>
-      <button id="createFunction" type="button" class="add-new btn btn-primary ml-3" (click)="newFaas()"
+      <button id="createFunction" type="button" class="add-new btn btn-primary btn-min-width ml-3 d-flex align-items-center" (click)="newFaas()"
         [disabled]="!hasWritePermission('FAAS')">
-        <span class="dsi dsi-plus"></span>
+        <span class="dsi dsi-plus mr-2"></span>
+        <span class="text">New Function</span>
       </button>
     </div>
   </div>
