--- a/src/app/home/schema-builder/schema-builder.component.html
+++ b/src/app/home/schema-builder/schema-builder.component.html
@@ -39,7 +39,7 @@
   </div>
   <form [formGroup]="form" class="d-flex flex-column w-100 h-100 mt-4">
     <div class="d-flex flex-column w-100 h-100 border-top border-left border-right rounded bg-white">
-      <div class="tabs d-flex align-items-center border-bottom" (click)="showHiddenMenu()" id="sbTabs">
+      <div class="tabs d-flex align-items-center border-bottom text-uppercase" (click)="showHiddenMenu()" id="sbTabs">
         <div class="font-13 pl-4 pr-2 font-weight-bold hover" *ngIf="hasPermissionForTab('D')" (click)="activeTab=0"
           [ngClass]="{'active':activeTab==0}">
           <span>Design</span>
@@ -83,12 +83,12 @@
         <ng-container>
           <div class="p-4 d-flex align-items-center" *ngIf="activeTab == 0">
             <div class="d-flex align-items-center hover mr-3" (click)="toggleSchemaType(false)">
-              <odp-round-radio size="24" [checked]="isSchemaFree==false" (checkedChange)="toggleSchemaType(false)">
+              <odp-round-radio size="18" [edit]="edit" [checked]="isSchemaFree==false" (checkedChange)="toggleSchemaType(false)">
               </odp-round-radio>
               <span class="text ml-2">Schema Based</span>
             </div>
             <div class="d-flex align-items-center hover" (click)="toggleSchemaType(true)">
-              <odp-round-radio size="24" [checked]="isSchemaFree==true" (checkedChange)="toggleSchemaType(true)">
+              <odp-round-radio size="18" [edit]="edit" [checked]="isSchemaFree==true" (checkedChange)="toggleSchemaType(true)">
               </odp-round-radio>
               <span class="text ml-2">Schema Free</span>
             </div>
