--- a/src/app/home/schema-utils/maker-checker/maker-checker.component.html
+++ b/src/app/home/schema-utils/maker-checker/maker-checker.component.html
@@ -24,17 +24,19 @@
     <div class="p-4 w-100" id="maker-checker-section" *ngIf="makerCheckerCreated">
       <form [formGroup]="makerCheckerData">
         <div class="d-flex justify-content-between">
-          <div class="d-flex justify-content-start">
+          <div class="d-flex justify-content-start align-items-center">
             <strong class="heading1">Workflows</strong>
-            <div class="ml-4 p-1" [ngClass]="{ 'pt-2': !edit.status }">
+            <div class="ml-4" [ngClass]="{ 'pt-2': !edit.status }">
               <odp-switch [edit]="edit" [(checked)]="makerCheckerEnabled" (checkedChange)="toggleMakerChecker($event)">
               </odp-switch>
             </div>
           </div>
           <div class="d-flex justify-content-end" *ngIf="edit.status">
-            <div id="remove-maker-checker" class="text-center rounded hover" (click)="deleteMakerChecker()">
-              <span class="dsi dsi-trash align-middle text-gray"></span>
-            </div>
+            <button id="remove-maker-checker" type="button" class="btn btn-white border d-flex align-items-center"
+              (click)="deleteMakerChecker()">
+              <span class="dsi dsi-trash mr-2"></span>
+              <span class="text">Delete</span>
+            </button>
             <!-- <button class="btn btn-outline-primary btn-min-width" id="AddNewMakerChecker" (click)='toggleMakerChecker(true)'>
                             <span class="dsi dsi-plus mr-2"></span>
                             <span class="text">Add</span>
@@ -55,7 +57,7 @@
                     <span>Delete</span>
                   </div>
                   <div>
-                    <button type="button" class="btn btn-link d-flex align-items-center" (click)="addStep()">
+                    <button type="button" class="btn btn-white border d-flex align-items-center" (click)="addStep()">
                       <span class="dsi dsi-plus mr-2"></span>
                       <span class="">Add Step</span>
                     </button>
