data service settings fixed

--- a/src/app/home/local-bot/manage-bot-key/manage-bot-key.component.html
+++ b/src/app/home/local-bot/manage-bot-key/manage-bot-key.component.html
@@ -83,7 +83,7 @@
     </div>
 
     <div *ngIf="hasNewKey()" class="d-flex selected">
-        <span style="color: #F26464">*</span>
+        <span class="text-danger">*</span>
         <span>Please Copy the key. The key cannot be retrived once you navigate away from the screen</span>
     </div>
 </div>
