--- a/src/styles.scss
+++ b/src/styles.scss
@@ -134,6 +134,18 @@ $odp-ui-author-theme: mat-light-theme((color: (primary: $odp-ui-author-primary,
   font-size: 11px;
 }
 
+.fw-900 {
+  font-weight: 900 !important;
+}
+
+.fw-800 {
+  font-weight: 800 !important;
+}
+
+.fw-700 {
+  font-weight: 700 !important;
+}
+
 .fw-600 {
   font-weight: 600 !important;
 }
