--- a/src/app/home/schema-utils/configuration/configuration.component.html
+++ b/src/app/home/schema-utils/configuration/configuration.component.html
@@ -1,322 +1,22 @@
-<div class="configuration d-flex flex-column w-100" [formGroup]="form">
-  <div class="d-flex p-4 builder-body">
-    <div class="">
-      <div class="d-flex w-100 pb-3" *ngIf="canView('S') || canView('S')">
-        <div class="d-flex flex-column w-50">
-          <span class="font-weight-bold">Data Settings</span>
-          <span class="text-accent my-2">These settings defines how records are handled</span>
-          <div class="d-flex flex-column w-100 px-3">
-            <div class="d-flex mt-3" *ngIf="canView('S')">
-              <div class="text-secondary option-label">
-                Delete data permanently when a record is deleted at the App
-                Center
-              </div>
-              <div class="
-                  switch-container
-                  d-flex
-                  align-items-center
-                  justify-content-center
-                ">
-                <odp-switch [edit]="{status:edit.status && canEdit('S')}"
-                  [checked]="form.get('permanentDeleteData').value"
-                  (checkedChange)="form.get('permanentDeleteData').patchValue($event)"></odp-switch>
-              </div>
-            </div>
-            <div class="d-flex mt-3" *ngIf="canView('S')">
-              <div class="text-secondary option-label">
-                Keep a history of data when data is changed?
-              </div>
-              <div class="
-                  switch-container
-                  d-flex
-                  align-items-center
-                  justify-content-center
-                ">
-                <odp-switch [edit]="{status:edit.status && canEdit('S')}" [(checked)]="retainDataHistory"
-                  (checkedChange)="onVersionChange($event)"></odp-switch>
-              </div>
-            </div>
-            <div class="d-flex mt-3" *ngIf="retainDataHistory && canView('S')">
-              <div class="text-secondary option-label">Retain data by</div>
-              <div class="d-flex flex-column">
-                <div class="btn-group btn-group-toggle" (change)="patchVersionValue(true)" ngbRadioGroup
-                  [ngModelOptions]="{ standalone: true }" [(ngModel)]="versionConfig.type">
-                  <label ngbButtonLabel class="btn btn-outline-accent">
-                    <input ngbButton type="radio" value="count" [disabled]="!edit.status || !canEdit('S')" />
-                    Versions
-                  </label>
-                  <label ngbButtonLabel class="btn btn-outline-accent">
-                    <input ngbButton type="radio" value="time" [disabled]="!edit.status || !canEdit('S')" />
-                    Duration
-                  </label>
-                </div>
-                <ng-container>
-                  <select *ngIf="
-                      form.get('versionValidity.validityType').value == 'time'
-                    " class="form-control my-2" [(ngModel)]="versionConfig.value"
-                    [ngModelOptions]="{ standalone: true }" (change)="patchVersionValue()"
-                    [disabled]="!edit.status || !canEdit('S')">
-                    <option value="">All</option>
-                    <option value="custom">Custom</option>
-                    <option value="1 months">1 Month</option>
-                    <option value="3 months">3 Month</option>
-                    <option value="6 months">6 Month</option>
-                    <option value="1 years">1 Year</option>
-                  </select>
-                  <select *ngIf="
-                      form.get('versionValidity.validityType').value == 'count'
-                    " class="form-control my-2" (change)="patchVersionValue()" [ngModelOptions]="{ standalone: true }"
-                    [(ngModel)]="versionConfig.value" [disabled]="!edit.status || !canEdit('S')">
-                    <option value="-1" selected>All</option>
-                    <option value="custom">Custom</option>
-                    <option value="10">Last 10</option>
-                    <option value="25">Last 25</option>
-                    <option value="50">Last 50</option>
-                    <option value="100">Last 100</option>
-                  </select>
-                </ng-container>
-                <div *ngIf="versionConfig.isCustomValue" class="custom-input-number position-relative">
-                  <input type="number" class="form-control" [ngModelOptions]="{ standalone: true }"
-                    [(ngModel)]="versionConfig.customValue" #vcCustomval="ngModel" (change)="patchVersionValue()"
-                    min="1" [disabled]="!edit.status || !canEdit('S')" />
-                  <span class="
-                      fa fa-xs fa-circle
-                      text-danger
-                      position-absolute
-                      version-error-symbol
-                    " ngbTooltip="Custom value should not be less than '1'" placement="right"
-                    *ngIf="!validityValidator && vcCustomval.touched"></span>
-                  <select class="
-                      embeded-select
-                      position-absolute
-                      text-accent
-                      bg-white
-                      border-0
-                    " *ngIf="
-                      form.get('versionValidity.validityType').value == 'time'
-                    " [ngModelOptions]="{ standalone: true }" [(ngModel)]="versionConfig.customValueSuffix"
-                    (change)="patchVersionValue()" [disabled]="!edit.status || !canEdit('S')">
-                    <option value="minutes">Minutes</option>
-                    <option value="hour">Hour</option>
-                    <option value="days">Days</option>
-                    <option value="months">Months</option>
-                    <option value="years">Years</option>
-                  </select>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+<div class="configuration-wrapper d-flex align-items-stretch">
+  <div class="sidenav p-4">
+    <div class="d-flex flex-column text-muted">
+      <div class="p-2 mb-3 w-100 d-flex justify-content-between" *ngIf="canView('S')">
+        <span class="hover" (click)="activeTab=1" [ngClass]="{'text-dark fw-600': activeTab==1}">Data Settings</span>
       </div>
-      <div class="d-flex flex-column w-100 pb-3">
-        <span class="font-weight-bold">Insights Settings</span>
-        <div class="d-flex mt-2" *ngIf="isAdmin">
-          <div class="text-secondary option-label">Disable Insights</div>
-          <div class="
-              switch-container
-              d-flex
-              align-items-center
-              justify-content-center
-            ">
-            <odp-switch [edit]="{status:edit.status && canEdit('S')}" [checked]="form.get('disableInsights').value"
-              (checkedChange)="form.get('disableInsights').patchValue($event)"></odp-switch>
-          </div>
-        </div>
+      <div class="p-2 mb-3 w-100 d-flex justify-content-between" *ngIf="canView('S')">
+        <span class="hover" (click)="activeTab=2" [ngClass]="{'text-dark fw-600': activeTab==2}" id="postHooks">Search
+          Settings</span>
       </div>
-      <div class="pb-3" *ngIf="edit.status && canEdit('S')">
-        <div class="d-flex flex-column w-50 p-4 reset-data">
-          <div class="d-flex mb-3">
-            <div class="mr-2 warning position-relative">
-              <span class="fas fa-xs fa-exclamation position-absolute icon-pos"></span>
-            </div>
-            <div><strong>Reset</strong></div>
-          </div>
-          <div class="d-flex mb-3">
-            Note that, these actions are&nbsp;
-            <strong>permanent and can not be undone.</strong>
-          </div>
-          <div class="d-flex align-items-start justify-content-between mb-3">
-            <div class="d-flex flex-column">
-              <div>Clear logs</div>
-              <div class="text-secondary">
-                Remove all logs generated by hooks and workflows
-              </div>
-            </div>
-            <div class="btn-link text-danger hover mr-3" (click)="purgeData('logs')">
-              Purge all Logs
-            </div>
-          </div>
-          <div class="d-flex align-items-start justify-content-between mb-3">
-            <div class="d-flex flex-column">
-              <div>Clear audit</div>
-              <div class="text-secondary desc">
-                Remove all audit information of the data service and the
-                documents saved
-              </div>
-            </div>
-            <div class="btn-link text-danger hover mr-3" (click)="purgeData('audits')">
-              Purge all Audit
-            </div>
-          </div>
-          <div class="d-flex align-items-start justify-content-between mb-3">
-            <div class="d-flex flex-column">
-              <div>Clear all data</div>
-              <div class="text-secondary desc">
-                Remove all data that has been saved for this service. This would
-                include logs, audit, files and documents The counter would also
-                be reset
-              </div>
-            </div>
-            <div class="btn-link text-danger hover mr-3" (click)="purgeData('all')">
-              <strong>Purge all Data</strong>
-            </div>
-          </div>
-        </div>
+      <div class="p-2 mb-3 w-100 d-flex justify-content-between" *ngIf="canView('S')">
+        <span class="hover" (click)="activeTab=3" [ngClass]="{'text-dark fw-600': activeTab==3}" id="postHooks">Common
+          Settings</span>
       </div>
     </div>
-    <div class="">
-      <div class="d-flex flex-column pb-3" *ngIf="canView('S')">
-        <strong class="font-weight-bold mb-3">Customize API endpoint</strong>
-        <input *ngIf="edit.status && canEdit('S')" type="text" class="form-control" formControlName="api"
-          id="sbAPIEndpoint" />
-        <span *ngIf="!edit.status || !canEdit('S')" class="form-control-plaintext">{{ form.get("api").value }}</span>
-      </div>
-      <div class="d-flex flex-column fuzzy-toggle pb-3" *ngIf="canView('S')">
-        <div class="d-flex mb-2">
-          <div class="font-weight-bold">Fuzzy-search:</div>
-          <div class="value-width ml-3">
-            <odp-switch [edit]="{ status: edit.status && canEdit('S') }" [(checked)]="fuzzySearch"></odp-switch>
-          </div>
-        </div>
-        <div class="text-secondary">
-          Enabling fuzzy-search will allow you to search across all text fields.
-        </div>
-        <div class="text-secondary">
-          It is recommended to not enable fuzzy-search if the data service has a
-          lot of text fields (>10) or nested fields (e.g. Collection of Group
-          having Collections).
-        </div>
-      </div>
-      <div class="d-flex flex-column w-100 pb-3" *ngIf="canView('S')">
-        <span class="font-weight-bold mt-3 mb-2">Properties</span>
-        <table class="table">
-          <thead class="bg-light text-secondary">
-            <tr>
-              <th class="border-0">#</th>
-              <th class="border-0">Key</th>
-              <th class="border-0">Value</th>
-              <th class="border-0"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of headers; let i = index">
-              <td>{{ i + 1 }}.</td>
-              <td class="text-secondaary">
-                {{ item.key }}
-              </td>
-              <td class="text-dark">
-                {{ item.value }}
-              </td>
-              <td>
-                <span *ngIf="edit.status && canEdit('S')" class="dsi dsi-trash text-danger hover"
-                  (click)="removeHeader(item.key)"></span>
-              </td>
-            </tr>
-            <tr *ngIf="edit.status && canEdit('S')">
-              <td colspan="4">
-                <button type="button" class="btn btn-link" (click)="openHeadersModal()">
-                  <span class="dsi dsi-plus mr-2"></span>
-                  <span class="text">Add Property</span>
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <div class="d-flex flex-column w-100 px-3"></div>
-      </div>
-    </div>
+  </div>
+  <div class="content w-100">
+    <odp-data-settings *ngIf="activeTab==1" [form]="form" [edit]="edit" [versionConfig]="versionConfig" ></odp-data-settings>
+    <odp-search-settings *ngIf="activeTab==2" [form]="form" [edit]="edit"></odp-search-settings>
+    <odp-common-settings *ngIf="activeTab==3" [form]="form" [edit]="edit"></odp-common-settings>
   </div>
 </div>
-
-<ng-template #keyValModalTemplate>
-  <div class="
-      delete-modal-body
-      modal-body
-      p-4
-      d-flex
-      flex-column
-      align-items-center
-    ">
-    <div class="d-flex align-items-center justify-content-between mb-3 w-100">
-      <span class="font-20 fw-600" *ngIf="headerData && headerData.isEdit">Edit Properties</span>
-      <span class="font-20 fw-600" *ngIf="!headerData || !headerData.isEdit">Add Properties</span>
-      <span class="fa fa-times text-muted hover" (click)="keyValModalTemplateRef.close(false)"></span>
-    </div>
-    <div class="
-        info
-        d-flex
-        flex-column
-        align-self-center
-        justify-content-center
-        w-100
-      ">
-      <div class="form-group">
-        <label for="key">Key</label>
-        <div class="w-100 position-relative headers-key-wrapper">
-          <input #headerKey="ngModel" id="key" type="text" class="form-control" [(ngModel)]="headerData.key"
-            maxlength="24" pattern="[a-zA-Z0-9_-]+" required [disabled]="headerData.isEdit" odpAutoFocus
-            (keyup.enter)="headerValue.focus()" [ngClass]="{
-              'is-invalid':
-                headerKey.invalid && (headerKey.dirty || headerKey.touched)
-            }" />
-          <ng-container *ngIf="headerKey.invalid && (headerKey.dirty || headerKey.touched)">
-            <span *ngIf="headerKey?.errors?.required" class="text-danger position-absolute fa fa-exclamation-circle"
-              container="body" ngbTooltip="Key is required"></span>
-            <span *ngIf="headerKey?.errors?.pattern" class="text-danger position-absolute fa fa-exclamation-circle"
-              container="body"
-              ngbTooltip="Key can be only alphanumeric and can only contain underscore(_) and dash(-)"></span>
-          </ng-container>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="value">Value</label>
-        <input #headerValue id="value" type="text" class="form-control" [(ngModel)]="headerData.value"
-          (keyup.enter)="headerSave.click()" />
-      </div>
-      <div class="d-flex flex-column align-items-end w-100 mt-auto">
-        <button #headerSave type="button" class="btn btn-dark btn-min-width" id="keyValueModalYes"
-          [disabled]="headerKey.invalid" (click)="keyValModalTemplateRef.close(true)">
-          Save
-        </button>
-      </div>
-    </div>
-  </div>
-</ng-template>
-
-<ng-template #purgeModalTemplate>
-  <div class="delete-modal-body modal-body p-4 d-flex flex-column align-items-center"
-    (trigger)="purgeModalTemplateRef.close(true)">
-    <div class="d-flex align-items-center justify-content-between mb-4 w-100">
-      <div class="d-flex align-items-center">
-        <span class="dsi dsi-danger-circle mr-2"></span>
-        <span class="font-20 fw-600"><strong>{{ purgeModal.title }}</strong></span>
-      </div>
-      <span class="dsi dsi-close text-dark hover" (click)="purgeModalTemplateRef.close(false)"></span>
-    </div>
-    <div class="info d-flex flex-column align-self-center justify-content-center w-100">
-      <div class="desc-pos">{{ purgeModal.desc }}</div>
-      <div class="text-center mt-3 px-4">
-        <span class="confirm-text">
-          Please type in the name of the data service to confirm
-        </span>
-      </div>
-      <input type="text" class="form-control mt-3 service-name" placeholder="Enter the Data Service name"
-        [(ngModel)]="confirmServiceName" odpAutoFocus />
-      <div class="text-center mt-5">
-        <button class="btn btn-danger" type="button" (click)="purgeModalTemplateRef.close(true)">
-          {{ purgeModal.btnText }}
-        </button>
-      </div>
-    </div>
-  </div>
-</ng-template>
